--- a/templates/genderate.html
+++ b/templates/genderate.html
@@ -2,7 +2,7 @@
 <head></head>
 <body>
 	Is your gender <span id="genderText"></span>?
-	<script type="text/javascript" src="{{url_for('static', filename='js/jquery-1.7.2.js') }}"></script>
+	<script type="text/javascript" src="/{{url_for('static', filename='js/jquery-1.7.2.js') }}"></script>
 	<script type="text/javascript">
 		$(function(){
 			$.getJSON("get_random_gender", function(data){
