--- a/templates/settings.html
+++ b/templates/settings.html
@@ -10,7 +10,7 @@
 			<input type="checkbox" id="profile_genderCheckbox" name="specifyGender" onclick="genderCheckboxClick()">Specify gender<br/>
 			<div id="profile_genderArea">
 				Gender: <input type="text" id="genderName" name="genderName"><br/>
-				Not sure? Use the <a href="/genderate">genderator!</a>
+				Not sure? Use the <a href="/{{url_for('genderate')}}">genderator!</a>
 			</div>
 		</form>
 	</div>
